lbdb (0.17) unstable; urgency=low

  * Delay munging of mails when using lbdb-fetchaddr/m_inmail by adding a
    new script lbdb-munge, which is run by lbdbq and can be run by cron
    additionally.

 -- Roland Rosenfeld <roland@debian.org>  Thu, 29 Apr 1999 12:55:18 +0200

lbdb (0.16.3) unstable; urgency=low

  * include getopt.h only if it is existing (using autoconf). 

 -- Roland Rosenfeld <roland@debian.org>  Wed,  7 Apr 1999 12:22:13 +0200

lbdb (0.16.2) unstable; urgency=low

  * Removed some bash, GNU-make, and GNU libc specials.

 -- Roland Rosenfeld <roland@debian.org>  Tue,  6 Apr 1999 19:11:24 +0200

lbdb (0.16.1) unstable; urgency=low

  * lbdb-fetchaddr: Create directory $HOME/.lbdb if it does not exist.

 -- Roland Rosenfeld <roland@debian.org>  Mon,  5 Apr 1999 13:12:04 +0200

lbdb (0.16) unstable; urgency=low

  * Added dotlock command from mutt 0.96.1 sources (without the SGID mail
    stuff) which is installed as lbdb_dotlock, when no mutt_dotlock can be 
    found. This doesn't change the Debian binary, because the Debian
    package depends on mutt which is compiled with mutt_dotlock in the
    Debian environment (because of "SGID mail")

 -- Roland Rosenfeld <roland@debian.org>  Sun,  4 Apr 1999 19:24:26 +0200

lbdb (0.15.1) unstable; urgency=low

  * m_passwd: give UID in comment field.
  * m_gpg: now only return addresses which match query. Closes #33672.

 -- Roland Rosenfeld <roland@debian.org>  Sun, 21 Feb 1999 18:55:45 +0100

lbdb (0.15) unstable; urgency=low

  * Added new modules:
    - m_passwd: looks into /etc/passwd for addresses
    - m_pgp2:   scans your PGP 2.* keyring for addresses
    - m_pgp5:   scans your PGP 5.* keyring for addresses
    - m_gpg:    scans your GnuPG keyring for addresses   
  * Made config directory autoconf configureable as @sysconfdir@ (this
    does not change anything for the Debian package).
  * Fixed trouble in configure.in noted by Fabrice Noilhan
    <noilhan@clipper.ens.fr>.
