@@ -23,6 +23,7 @@ lbdbq \- query program for the little brother's database
 .I something
 .br
 .B lbdb-fetchaddr
+.BI [ 'dateformat' ]
 .br
 .B lbdb-munge
 .SH DESCRIPTION
@@ -122,6 +123,18 @@ may be a good idea to run
 .B lbdb-munge
 by
 .BR cron (8).
+.br
+.B lbdb-fetchaddr
+writes the actual date to the third column of the database by using
+.BR strftime (3).
+It uses "%Y-%m-%d %H:%M" as the default date format (e.g. "1999-04-29
+14:33"). You can change this by adding a different date format string
+as parameter of lbdb-fetchaddr command like
+.nf  
+     :0hc
+     | lbdb-fetchaddr "%y-%m-%d"
+.fi
+which results in e.g. "99-04-29".
 .TP
 .B m_passwd
 This module searches for matching entries in your local /etc/passwd
